# drive-primer

./: .gitignore  .gitmodules  README.md  chrono.patch
cmars/: CMakeLists.txt  README.md
cmars/data/vsg/: imgui.ini
cmars/demos/: CMakeLists.txt  cmars.cpp  slipslope.cpp
cmars/demos/legacy/: rigid_rig.cpp  sol_01294.cpp
cmars/resources/: rksml_playback_0781826423_propagated_sol01295.rksml
cmars/resources/M2020/: m2020.urdf  m2020.xml
cmars/resources/M2020/meshes/: HGA_EL.mtl  Turret.mtl  Wheel_Col_Left.mtl  Wheel_Col_Right.mtl  Wheel_RightRear.mtl
cmars/resources/downlink/: open_loop.csv
cmars/resources/downlink/01293/: N_LT_1293_XYM_SM2_RAS060_3478_AUTOGENJ06.mod
cmars/resources/downlink/01294/: N_LT_1294_XYM_SM2_RAS060_3632_AUTOGENJ06.mod
cmars/resources/downlink/benchmark/: benchmark1_metadata.txt  benchmark2_simdef.json  benchmark3.csv  benchmark4.csv  benchmark5.csv  benchmark6_1.csv  benchmark6_2.csv  benchmark7_1.csv  benchmark7_2.csv  benchmark8_1.csv  benchmark8_2.csv
cmars/resources/tview_vis/cmars_output_sol_01294/: successful_output_84_0.csv  successful_output_87_0.csv
cmars/scripts/: README.md  build_hpc.sh  simdef_1577.json  simdef_dev.json  simdef_slip.json
cmars/src/: heightmap_parser.h  perseverance_controller.h  perseverance_goto_controller.h  perseverance_locomotion.h  perseverance_logger.h  perseverance_openloop_controller.h  perseverance_slip.h  perseverance_straight_drive_controller.h  perseverance_utils.h
docker/: dev.dockerfile  docker-compose.yml  vnc.dockerfile
docker/snippets/: ch_fsi.dockerfile  ch_parser.dockerfile  chrono.dockerfile
dp-cli/: setup.py
dp-cli/src/: drive_primer.py
param-identification/: optuna_study.db  run_trials.slurm  setup.py
param-identification/configs/: 1577.json  benchmark.json  dev.json  hpc.json  simdef_dev.json
param-identification/src/: config_gui.py  csv2rksml.py  gen_json.py  gen_products.py  run_bay_opt.py
slip-table/: setup.py
slip-table/downlink/: sol01286_slip_incons.txt  sol01295_slip_incons.txt  sol01577_slip_incons.txt  sol01578_slip_incons.txt
slip-table/src/: gp_table.py  rksml_interp.py  (+2 more)
(+35 files in other folders)
